# Proyecto1

./: .gitignore
API_GO/: .dockerignore  .env  .gitignore  Dockerfile  containerd.txt  docker.txt  github_key  github_key.pub  go.mod  go.sum  instalaciones extra  instrucciones.txt  main.go
API_KERNEL/: .env  Instrucciones.txt  index.js  package-lock.json  package.json
API_KERNEL/routes/: kernel.js
API_REPORTES/: index.js  package-lock.json  package.json
API_REPORTES/config/: dbMongo.js  dbMysql.js
API_REPORTES/controllers/: mongo.js  mysql.js
API_REPORTES/routes/: consulta.js
GRAFANA/: datasources.yml
KERNEL/: comandos.txt
KERNEL/DEBIAN/cpumodule/: cpumodule.c
KERNEL/DEBIAN/rammodule/: rammodule.c
KERNEL/UBUNTU/cpumodule/: Makefile  cpumodule.c
KERNEL/UBUNTU/rammodule/: rammodule.c
KERNEL/ram/: Makefile
LOAD_TESTER_GO/: main.go  prueba.json  prueba2.json  prueba3.json
LoadTesterPython/: main.py  prueba.json
MONITOREO/: Instrucciones.txt
PROMETHEUS/: prometheus.yml
REACT/Source Files/: Dockerfile  package-lock.json  package.json
REACT/Source Files/public/: index.html
REACT/Source Files/src/: routes.js
REACT/Source Files/src/components/blog/: UsersByDevice.js
REACT/Source Files/src/components/layout/MainNavbar/NavbarNav/: Monitoreo.js  NavbarNav.js  Notifications.js  UserActions.js
REACT/Source Files/src/components/layout/MainSidebar/: SidebarMainNavbar.js
REACT/Source Files/src/data/: dataHashtags.js  globales.js  notifications_number.js  sidebar-nav-items.js
REACT/Source Files/src/service/: socket.service.js
REACT/Source Files/src/views/: Dashboard.js  Notifications.js  Tweet2.js  Tweets.js
api-rust/: .env  Cargo.toml  Dockerfile  docker-compose.yml
api-rust/src/: main.rs  models.rs  routes.rs  schema.rs
apy_python/: Dockerfile  app.py  docker-compose.yml  requirements.txt
locust/: main.py  prueba.json
pubsub/: .env  Cargo.toml
pubsub/src/: main.rs
rocket-app/: .env  .env.example  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
rocket-app/migrations/2021-09-19-003408_initialize/: up.sql
rocket-app/src/: key.json  main.rs  models.rs  routes.rs
