[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes         =  "1"
hyper         =  "0.14"
hyper-tls     =  "0.5"
tokio = { version = "1", features = ["full"] }
goauth        =  "0.9"
smpl_jwt      =  "0.6"
serde         =  "1.0"
serde_derive  =  "1.0"
serde_json    =  "1.0"
base64        =  "0.13"
lazy_static   =  "1.4.0"
rand          =  "0.8"
log           =  "0.4"
cloud-pubsub = "0.6.0"
envy          =  "0.4"

